<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="model"
            type="cn.xmzt.www.mine.model.FindPasswordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/title_rl"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/white">

            <ImageView
                android:onClick="@{model::onClick}"
                android:id="@+id/title_back_iv"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"

                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_height="match_parent"
                android:src="@drawable/icon_new_back"/>

            <TextView
                android:id="@+id/title_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="忘记密码"
                android:textColor="@color/title_color"
                android:textSize="17sp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/user_message_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!-- 账户 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="100dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/login_phone" />


                <EditText
                    android:id="@+id/account_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:background="@null"
                    android:hint="请输入手机号码"
                    android:inputType="number"
                    android:maxLength="11"
                    android:onTextChanged="@{model::onPhoneChanged}"
                    android:singleLine="true"
                    android:textColor="@color/color_33_33_33"
                    android:textColorHint="@color/color_99_99_99"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- 账户下面的下划线 -->
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1_px"
                android:layout_marginLeft="@dimen/size_25"
                android:layout_marginRight="@dimen/size_25"
                android:layout_marginTop="8dp"
                android:background="@color/color_E5_E5_E5" />

            <!-- 验证码 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="35dp">

                <ImageView
                    android:id="@+id/verification_code_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/login_code" />

                <TextView
                    android:id="@+id/get_verification_code_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:enabled="@{model.isGetCode?true:false}"
                    android:onClick="@{model::onClick}"
                    android:text="获取验证码"
                    android:textColor="@{model.isGetCode?@color/color_49_BE_FF:@color/color_88_49_BE_FF}"
                    android:textSize="14sp" />


                <EditText
                    android:id="@+id/verification_code_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toLeftOf="@+id/get_verification_code_tv"
                    android:layout_toRightOf="@+id/verification_code_iv"
                    android:background="@null"
                    android:hint="请输入手机验证码"
                    android:inputType="number"
                    android:maxLength="6"
                    android:onTextChanged="@{model::onCodeChanged}"
                    android:singleLine="true"
                    android:textColor="@color/color_33_33_33"
                    android:textColorHint="@color/color_99_99_99"
                    android:textSize="16sp" />
            </RelativeLayout>

            <!-- 密码下面的下划线 -->
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1_px"
                android:layout_marginLeft="@dimen/size_25"
                android:layout_marginRight="@dimen/size_25"
                android:layout_marginTop="@dimen/size_8"
                android:background="@color/gray_1" />

            <!-- 新密码 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_30"
                android:layout_marginRight="@dimen/size_30"
                android:layout_marginTop="@dimen/size_35">

                <ImageView
                    android:id="@+id/new_password_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/login_lock" />

                <ImageView
                    android:id="@+id/view_new_password_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:onClick="@{model::onClick}"
                    android:src="@{model.isFirstEye?@drawable/login_eye:@drawable/login_eye_no}" />


                <EditText
                    android:id="@+id/new_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/size_20"
                    android:layout_marginRight="@dimen/size_20"
                    android:layout_toLeftOf="@+id/view_new_password_iv"
                    android:layout_toRightOf="@+id/new_password_iv"
                    android:background="@null"
                    android:hint="@string/fpa_new_password_hint"
                    android:inputType="textPassword"
                    android:maxLength="18"
                    android:onTextChanged="@{model::onNewPswChanged}"
                    android:singleLine="true"
                    android:textColor="@color/color_33_33_33"
                    android:textColorHint="@color/color_99_99_99"
                    android:textSize="16sp" />
            </RelativeLayout>

            <!-- 新密码下面的下划线 -->
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1_px"
                android:layout_marginLeft="@dimen/size_25"
                android:layout_marginRight="@dimen/size_25"
                android:layout_marginTop="@dimen/size_8"
                android:background="@color/gray_1" />


            <!-- 确认密码 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="35dp">

                <ImageView
                    android:id="@+id/confirm_password_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/login_lock" />

                <ImageView
                    android:id="@+id/view_confirm_password_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:onClick="@{model::onClick}"
                    android:src="@{model.isSecondEye?@drawable/login_eye:@drawable/login_eye_no}" />


                <EditText
                    android:id="@+id/confirm_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/size_20"
                    android:layout_marginRight="@dimen/size_20"
                    android:layout_toLeftOf="@+id/view_confirm_password_iv"
                    android:layout_toRightOf="@+id/confirm_password_iv"
                    android:background="@null"
                    android:hint="@string/fpa_confirm_password_hint"
                    android:inputType="textPassword"
                    android:maxLength="18"
                    android:onTextChanged="@{model::onConfirmPswChanged}"
                    android:singleLine="true"
                    android:textColor="@color/title_color"
                    android:textColorHint="@color/color_99_99_99"
                    android:textSize="@dimen/text_size_16" />
            </RelativeLayout>

            <!-- 确认密码下面的下划线 -->
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1_px"
                android:layout_marginLeft="@dimen/size_25"
                android:layout_marginRight="@dimen/size_25"
                android:layout_marginTop="@dimen/size_8"
                android:background="@color/gray_1" />

            <!-- 确定 -->
            <TextView
                android:id="@+id/confirm_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@{model.isGetCode&amp;model.isCode&amp;model.isNewPassWord&amp;model.isConfirmPassWord?@drawable/bottom_bg:@drawable/bottom_bg_no}"
                android:enabled="@{model.isGetCode&amp;model.isCode&amp;model.isNewPassWord&amp;model.isConfirmPassWord?true:false}"
                android:gravity="center"
                android:onClick="@{model::onClick}"
                android:text="@string/common_confirm"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_17" />
        </LinearLayout>

    </LinearLayout>
</layout>